--- a/index.html
+++ b/index.html
@@ -1,8 +1,6 @@
 <script src="processing.js"></script>
 <script type="text/processing" data-processing-target="mycanvas">
 
-// @pjs preload must be used to preload the image so that it will be available when used in the sketch  
-/* @pjs preload="data/dirt.jpg"; */
 
 void setup() {
 
@@ -15,7 +13,7 @@ var code = Math.round(Math.random()*10000);
 var Beaver = function(x, y) {
     this.x = x;
     this.y = y;
-    this.img = loadImage("data/dirt.jpg");
+    this.img = loadImage("data/jump.jpg");
     this.sticks = 0;
 };
 
@@ -26,12 +24,12 @@ Beaver.prototype.draw = function() {
 };
 
 Beaver.prototype.hop = function() {
-    this.img = loadImage("data/dirt.jpg");
+    this.img = loadImage("data/jump.jpg");
     this.y -= 5;
 };
 
 Beaver.prototype.fall = function() {
-    this.img = loadImage("data/dirt.jpg");
+    this.img = loadImage("data/fall.jpg");
     this.y += 5;
 };
 
