--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@ Beaver.prototype.hop = function() {
 };
 
 Beaver.prototype.fall = function() {
-    this.img = loadImage("data/fall.png");
+    this.img = loadImage("data/jump.jpg");
     this.y += 5;
 };
 
